- changed Ldap itests to use security - added ManagedService interface to UserAdmin registration
git-svn-id: https://scm.ops4j.org/repos/ops4j/projects/pax/useradmin@16166 9b982a3c-3ae5-0310-a4bc-d9a3335569bd